plugins {
    id 'com.android.application'
    id 'org.jetbrains.kotlin.android'
    id 'com.mikepenz.aboutlibraries.plugin'
    id "org.sonarqube" version "6.2.0.5505"
}

android {
    compileSdk 36
    namespace 'de.nulide.findmydevice'
    packagingOptions {
        resources {
            excludes += ['META-INF/LICENSE.md', 'META-INF/NOTICE.md', 'META-INF/versions/9/OSGI-INF/MANIFEST.MF']
        }
    }

    lint {
        baseline = file("lint-baseline.xml")
        lintOptions {
            // There may be extra translations (strings in other languages that don't exist
            // in strings.xml anymore) temporarily, until Weblate automatically deletes them.
            disable 'ExtraTranslation'
            disable 'MissingTranslation'
        }
    }

    defaultConfig {
        applicationId "de.nulide.findmydevice"
        minSdkVersion 24
        // TODO: raise targetSdk again.
        // We supported targetSdk 34 until BluetoothCommand was added, which requires max 32 to work:
        // https://developer.android.com/reference/android/bluetooth/BluetoothAdapter#enable()
        // We should implement becoming a Device Owner, and then raise the targetSdk again.
        // https://gitlab.com/Nulide/findmydevice/-/issues/220
        // noinspection ExpiredTargetSdkVersion
        targetSdkVersion 32
        versionCode 37
        versionName "0.13.0"
        multiDexEnabled true

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            // WARNING: Compile and test the release flavor before publishing!!!
            // This is because minification may strip things that are not explicitly referenced
            // but are actually needed (e.g., objects being serialised by Gson).
            // https://stackoverflow.com/questions/35853593/minify-android-app-but-do-not-obfuscate-it
            // minifyEnabled true
            postprocessing {
                removeUnusedCode true
                removeUnusedResources true
                optimizeCode true
                obfuscate false
            }
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
        debug {
            // don't minify (for faster builds)
            minifyEnabled false
        }
    }

    flavorDimensions "default"
    productFlavors {
        prod {
            dimension "default"
            buildConfigField "String", "DEFAULT_FMD_COMMAND", "\"fmd\""
        }
        dev {
            dimension "default"
            applicationIdSuffix ".dev"
            buildConfigField "String", "DEFAULT_FMD_COMMAND", "\"fmdev\""
        }
    }

    // https://developer.android.com/guide/topics/resources/app-languages
    androidResources {
        generateLocaleConfig true
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_21
        targetCompatibility JavaVersion.VERSION_21
    }
    kotlin {
        jvmToolchain(21)
    }

    buildFeatures {
        buildConfig true
        viewBinding true
    }
}

dependencies {
    // AndroidX
    implementation 'androidx.activity:activity-ktx:1.12.1'
    implementation 'androidx.annotation:annotation:1.9.1'
    implementation 'androidx.appcompat:appcompat:1.7.1'
    implementation 'androidx.core:core-ktx:1.17.0'
    implementation 'androidx.concurrent:concurrent-futures-ktx:1.3.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
    implementation "androidx.fragment:fragment-ktx:1.8.9"
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.10.0'
    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.10.0'
    implementation 'androidx.preference:preference-ktx:1.2.1'
    implementation "androidx.work:work-runtime-ktx:2.11.0"
    implementation 'androidx.security:security-crypto-ktx:1.1.0'

    // CameraX
    def camerax_version = "1.5.2"
    implementation "androidx.camera:camera-core:${camerax_version}"
    implementation "androidx.camera:camera-camera2:${camerax_version}"
    implementation "androidx.camera:camera-lifecycle:${camerax_version}"
    implementation "androidx.camera:camera-video:${camerax_version}"
    implementation "androidx.camera:camera-view:${camerax_version}"
    implementation "androidx.camera:camera-extensions:${camerax_version}"

    // Testing
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.3.0'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'
    androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.10.2'

    implementation 'com.android.volley:volley:1.2.1'
    implementation 'com.android.support:multidex:1.0.3'
    implementation 'com.google.android.material:material:1.13.0'
    implementation 'com.google.code.gson:gson:2.13.2'

    implementation 'com.github.iamrobj:NotificationHelperLibrary:2.0.5'
    implementation 'com.github.UnifiedPush:android-connector:2.1.1'
    implementation 'com.jakewharton:process-phoenix:3.0.0'
    implementation "com.mikepenz:aboutlibraries:12.2.4"
    implementation "org.apache.maven:maven-artifact:3.9.11" // for semantic versions
    implementation 'org.bouncycastle:bcprov-jdk18on:1.83'

    // Shizuku
    implementation "dev.rikka.shizuku:api:13.1.0"
    implementation "dev.rikka.shizuku:provider:13.1.0"

    // com.google.crypto.tink uses javax.annotation.concurrent.GuardedBy
    // Without this dependency providing GuardedBy, R8 complains when minifying.
    implementation 'com.github.spotbugs:spotbugs-annotations:4.9.8'
}

sonar {
    androidVariant "devDebug"
    properties {
        property "sonar.projectName", "FMD Android" // defaults to "app" (from Gradle)
        property "sonar.projectKey", "fmd-foss_fmd-android"
        property "sonar.organization", "fmd-foss"

        // https://gitlab.com/fmd-foss/fmd-android/-/jobs/10666336525
        // https://community.sonarsource.com/t/execution-failed-for-task-sonar/136857
        // https://community.sonarsource.com/t/resolved-gradle-plugin-6-0-0-5145-error/132507
        property "sonar.scanner.skipJreProvisioning", true
    }
}
